Updated Portfolio UI

--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
         <h3>And I'm a <span class="text"></span></h3>
 
         <p>
-          Experienced IT professional with over 5 years of expertise in software
-          quality assurance, testing, and process optimization.
+          Innovative and results-oriented Senior Software Engineer with 4+ years of experience designing, developing, and deploying full-stack mobile and web applications across multiple domains, including education, insurance, fleet, media, and construction. Skilled in React Native, Flutter, Kotlin, Django, Laravel, and Vue.js, with strong DevOps and cloud deployment experience using AWS, Docker, and GitHub Actions. Passionate about clean architecture, test-driven development, and teaching engineering best practices. A collaborative team player with a drive to leverage technology to solve real-world challenges and improve lives.
         </p>
         <br />Proficient in defining test strategies, developing comprehensive
         test cases, and executing functional and non-functional testing across
@@ -145,35 +144,17 @@
           </div>
           <div>
             <i class="bi bi-crop" style="color: #0eff"></i>
-            <h2>UI/UX Design</h2>
+            <h2>Mobile Development</h2>
             <p>
-              I craft intuitive and engaging user interfaces that prioritize
-              both aesthetics and functionality. With a user-centered design
-              approach, I translate complex requirements into clean, responsive
-              layouts and seamless interactions. My UI/UX process involves
-              wireframing, prototyping, and usability testing to ensure every
-              screen delivers clarity, consistency, and ease of use. I work
-              closely with clients and stakeholders to align design with brand
-              identity and user expectations—resulting in mobile experiences
-              that not only look great but also drive user satisfaction and
-              retention.
+            As a passionate Mobile Developer, I specialize in building high-quality, scalable, and user-centric mobile applications using Flutter, React Native, and Kotlin. I have delivered impactful solutions across various domains, including eCommerce, insurance, education, media streaming, and logistics. My expertise spans across full app lifecycles—from UI/UX design and API integration to deployment and maintenance—ensuring smooth and secure user experiences. I take pride in writing clean, maintainable code using best practices such as MVVM architecture, modular design, and test-driven development. Whether developing apps for startups or training aspiring developers, I’m driven by the goal of turning ideas into powerful mobile solutions that make a real-world impact.
             </p>
             <a href="#" class="read">Learn More</a>
           </div>
           <div>
             <i class="bi bi-apple" style="color: #0eff"></i>
-            <h2>UI/UX Design</h2>
+            <h2>Frontend Development</h2>
             <p>
-              I craft intuitive and engaging user interfaces that prioritize
-              both aesthetics and functionality. With a user-centered design
-              approach, I translate complex requirements into clean, responsive
-              layouts and seamless interactions. My UI/UX process involves
-              wireframing, prototyping, and usability testing to ensure every
-              screen delivers clarity, consistency, and ease of use. I work
-              closely with clients and stakeholders to align design with brand
-              identity and user expectations—resulting in mobile experiences
-              that not only look great but also drive user satisfaction and
-              retention.
+          I bring a strong frontend development background with hands-on expertise in Vue.js, React Native, and Flutter, enabling me to craft visually appealing, responsive, and performance-optimized interfaces across web and mobile platforms. I have developed dynamic user experiences for apps in sectors such as construction, media, and logistics, using Vue.js to build scalable SPAs and dashboards, and React Native and Flutter to deliver cross-platform mobile apps with a native feel. I’m proficient in implementing component-based architectures, responsive design systems, and smooth animations to enhance usability and engagement. My focus on clean UI code, maintainable structure, and seamless user interactions ensures that every application not only looks great but also performs exceptionally.
             </p>
             <a href="#" class="read">Learn More</a>
           </div>
@@ -267,7 +248,7 @@
             <div class="bar">
               <i class="bi bi-filetype-jsx" style="color: #61dbfb"></i>
               <div class="info">
-                <span>React</span>
+                <span>React Native</span>
                 <div class="progress">
                   <div
                     class="progress-bar"
@@ -362,6 +343,9 @@
         </div>
 
         <div class="portfolio-content">
+
+
+       
           <!-- Project 1 -->
           <div class="project-card">
             <img
@@ -378,7 +362,7 @@
                 customized, strategic campaigns within the corporate
                 communications sector.
               </p>
-              <a href="#" class="project-link">
+              <a href="luemediaimages.com" class="project-link">
                 <i class="bi bi-link"></i>
               </a>
             </div>
@@ -425,58 +409,67 @@
               </a>
             </div>
           </div>
+
+
+    <!-- Project 1 -->
+          <div class="project-card">
+            <img
+              src="./images/Eyby.jpeg"
+              alt="BlueMedia Handbook Website"
+              class="project-img"
+            />
+            <div class="project-overlay">
+              <h5>Eyby Mobile App</h5>
+              <p>
+             EYBY Construction Store App is your one-stop destination for all your construction needs. Engineered to provide a seamless shopping experience, our app brings the best of the construction world right to your fingertips. Whether you are a seasoned builder, an interior designer, or just someone keen on making their home special, the app has got you covered!
+              </p>
+              <a href="https://play.google.com/store/apps/details?id=com.doshi&pcampaignid=web_share" class="project-link">
+                <i class="bi bi-link"></i>
+              </a>
+            </div>
+
         </div>
       </div>
     </section>
-   <section  id="contact" class="contact">
-  <div class="container text-white">
-    <div class="row">
-      <div class="col-lg-6 mb-4">
-        <h2 class="display-4 fw-bold text-center text-uppercase">
-          Contact <span class="text-info">Me</span>
-        </h2>
-        <p>
-          Let’s Build Something Great Together! Have a project in mind, a
-          collaboration idea, or just want to connect? I'm always open to
-          discussing new opportunities or ways I can help bring your vision to
-          life through code.
-        </p>
+<section id="contact" class="contact-section">
+  <h1 class="subtitle">Contact <span>Me</span></h1>
+  <div class="contact-container">
+    <!-- Left Side: Contact Info -->
+    <div class="contact-info">
+      <p>
+        Let’s Build Something Great Together! Have a project in mind, a
+        collaboration idea, or just want to connect? I'm always open to
+        discussing new opportunities or ways I can help bring your vision to
+        life through code.
+      </p>
 
-        <ul class="list-unstyled fs-5">
-          <li class="mb-2"><i class="bi bi-envelope-fill text-info me-2"></i> wilsonochieng718@gmail.com</li>
-          <li><i class="bi bi-phone-fill text-info me-2"></i> 0702430127</li>
-        </ul>
+      <ul class="contact-list">
+        <li><i class="bi bi-envelope-fill text-info me-2"></i> wilsonochieng718@gmail.com</li>
+        <li><i class="bi bi-phone-fill text-info me-2"></i> 0702430127</li>
+      </ul>
 
-        <div class="mt-4 d-flex gap-3">
-          <a href="#" class="text-info fs-4"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-info fs-4"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="text-info fs-4"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-info fs-4"><i class="bi bi-linkedin"></i></a>
-        </div>
+      <div class="contact-icons">
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"><i class="bi bi-twitter"></i></a>
+        <a href="#"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/wilson-owino/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
+    </div>
 
-      <div class="col-lg-6">
-        <form action="#" class="bg-dark p-4 rounded shadow">
-          <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Enter Your Name" required />
-          </div>
-          <div class="mb-3">
-            <input type="email" class="form-control" placeholder="Enter Your Email" required />
-          </div>
-          <div class="mb-3">
-            <input type="text" class="form-control" placeholder="Enter Your Subject" />
-          </div>
-          <div class="mb-3">
-            <textarea rows="5" class="form-control" placeholder="Enter Your Message" required></textarea>
-          </div>
-          <div class="text-end">
-            <button type="submit" class="btn btn-info text-dark fw-bold">Submit</button>
-          </div>
-        </form>
-      </div>
+    <!-- Right Side: Contact Form -->
+    <div class="contact-form">
+      <form action="#">
+        <input type="text" placeholder="Enter Your Name" required />
+        <input type="email" placeholder="Enter Your Email" required />
+        <input type="text" placeholder="Enter Your Subject" />
+        <textarea rows="5" placeholder="Enter Your Message" required></textarea>
+        <button type="submit" class="btn-info text-dark fw-bold">Submit</button>
+      </form>
     </div>
   </div>
 </section>
+
+
 
 
     <script src="main.js"></script>
