Updated Portfolio UI

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav> -->
       <nav class="navbar navbar-expand-xl navbar-dark">
         <div class="container">
-          <a href="#" class="navbar-brand">Porfolio</a>
+          <a href="#" class="navbar-brand">Portfolio</a>
           <button
             class="navbar-toggler"
             type="button"
