Renamed portfolio to Projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
               <a class="nav-item nav-link" href="#services">Services</a>
               <a class="nav-item nav-link" href="#skills-section">Skills</a>
               <a class="nav-item nav-link" href="#projects-section"
-                >Portfolio</a
+                >Projects</a
+              >
+               <a class="nav-item nav-link" href="#contact"
+                >Contact</a
               >
             </div>
           </div>
